TEST_PROGRAMS/VALID/Terrence_Ko/Tpower.min
var n: int;
var answer: int;
var finish: string;
var power: int;

finish = "done";
n = 10;
power = 1;
answer = 1024;

while n do
	power = power * 2;
	n = n -1;
done

if (answer - power) then
	print "Eeeeeh...";
else
	print finish;
endif
