TEST_PROGRAMS/INVALID/armin_taheri/invalid2.min
# assignment isn't an expression

var n: int;

n = 10;

while (n = n - 1) do
	print n;
done


